<resources>
    <string name="app_name">ElecApp</string>
    <string name="userName">User Name</string>
    <string name="pass">Password</string>
    <string name="Login">LogIn</string>
    <string name="elec">كهرباء</string>
    <string name="mecha">ميكانيكا</string>
    <string name="permit">شئون عاملين</string>
    <string name="tech">اوامر الشغل</string>
    <string name="arch">ارشيف</string>
    <string name="tranc">Transformer</string>
    <string name="k6">SG &amp; MCC</string>
    <string name="chinv">CH &amp; INV</string>
    <string name="etech">الشئون</string>
    <string name="dis">Diesel</string>

    <string name="home">Home</string>
    <string name="temp">Temp</string>
    <string name="ctg2">CTG2</string>
    <string name="name">Name</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="diesel">Diesel</string>
    <string name="ot">O-T</string>
    <string name="wt">W-T</string>
    <string name="heater">Heater</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="water">Water</string>
    <string name="v1">V1</string>
    <string name="k6v">6 K</string>
    <string name="v2">V2</string>
    <string name="v3">V3</string>
    <string name="p">P</string>
    <string name="lc">L.C</string>
    <string name="in1">IN 1</string>
    <string name="lc1">L.C 1</string>
    <string name="in2">IN 2</string>
    <string name="income1">Income 1</string>
    <string name="income2">Income 2</string>
    <string name="lc2">L.C 2</string>
    <string name="lc3">L.C 3</string>
    <string name="lc4">L.C 4</string>
    <string name="mcc">MCC</string>
    <string name="a">A</string>
    <string name="m01">M 01</string>
    <string name="m02">M 02</string>
    <string name="m03">M 03</string>
    <string name="m04">M 04</string>
    <string name="m05">M 05</string>
    <string name="m06">M 06</string>
    <string name="k1">K 1</string>
    <string name="k2">K 2</string>
    <string name="k3">K 3</string>
    <string name="k4">K 4</string>
    <string name="k5">K 5</string>
    <string name="k66">K 6</string>
    <string name="charger">Charger</string>
    <string name="load">Load</string>
    <string name="mv">M.V</string>
    <string name="mc">M.C</string>
    <string name="dcv">DC.V</string>
    <string name="dcc">DC.C</string>
    <string name="av">A.V</string>
    <string name="bc">B.C</string>
    <string name="ch1">1</string>
    <string name="ch2">2</string>
    <string name="ch3">3</string>
    <string name="ch4">4</string>
    <string name="ch5">5</string>
    <string name="ch6">6</string>
    <string name="ch7">7</string>
    <string name="ch8">8</string>
    <string name="ch9">9</string>
    <string name="inverter">Inverter</string>
    <string name="gasArea">Gas Area</string>
    <string name="transformers">Transformars</string>
    <string name="ctg1">CTG1</string>
    <string name="main">Main</string>
    <string name="oiltemp">Oil Temp</string>
    <string name="windtemp">Wind Temp</string>
    <string name="leakagecurrent">Leakage Current</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="aux">Aux</string>
    <string name="xtemp">X Temp</string>
    <string name="ytemp">Y Temp</string>
    <string name="tap">Tap</string>
    <string name="charge">Ch</string>
    <string name="ch">ch</string>
    <string name="excitation">Excitation</string>
    <string name="stg">STG</string>
    <string name="r1">R1</string>
    <string name="r2">R2</string>
    <string name="ctg1">CTG1</string>
    <string name="package">Package</string>

</resources>