<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TapActivity">


    <Button
        android:id="@+id/elecBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="15dp"
        android:text="@string/elec" />

    <Button
        android:id="@+id/mechaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/elecBtn"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="15dp"
        android:text="@string/mecha" />

    <Button
        android:id="@+id/prmtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mechaBtn"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="15dp"
        android:text="@string/permit" />

    <Button
        android:id="@+id/techBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prmtBtn"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tech" />

    <Button
        android:id="@+id/archBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/techBtn"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="50dp"
        android:text="@string/arch" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/archBtn"
        android:layout_gravity="center"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="50dp"
        android:text="@string/home"
        android:textColor="#D7CCC8"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>
