<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/LoginUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="235dp" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter User Name"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="276dp" />



    <TextView
        android:id="@+id/LoginPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="358dp" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter Password "
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="422dp" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="528dp" />
</androidx.constraintlayout.widget.ConstraintLayout>